# job-market-analysis

./: README.md  job_market_analysis.py  requirements.txt
go/: job_market_analysis.go
python/: job_market_analysis.py
python/job-market-analysis/: pyproject.toml
